<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:title="@string/homeTitle"/>
        <item
            android:id="@+id/carrito"
            android:title="@string/carrito"/>
        <item
            android:id="@+id/novedades"
            android:title="@string/novedades"/>
        <item
            android:id="@+id/ofertas"
            android:title="@string/ofertas"/>
        <item
            android:id="@+id/ps4"
            android:title="@string/ps4"/>
        <item
            android:id="@+id/xbox"
            android:title="@string/xbox"/>
    </group>

    <item android:title="@string/support">
        <menu>
            <item
                android:id="@+id/donde_estamos"
                android:title="@string/donde_estamos"/>
            <item
                android:id="@+id/contacto"
                android:title="@string/contacto"/>
        </menu>
    </item>
</menu>